--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <div class="page">
     <header class="header">
       <img class="header__main-illustration" src="./images/header-image.png" alt="Фрагмент картины 'Опять двойка'">
-      <img class="logo logo__place_header" src="./images/logo_place_header.svg" alt="Логотип Яндекс Практикум">
+      <img class="logo logo_place_header" src="./images/logo_place_header.svg" alt="Логотип Яндекс Практикум">
       <h1 class="header__title">Научиться учиться</h1>
       <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
         <a href="#" class="header__link">Узнать &rarr;</a>
@@ -131,7 +131,7 @@
             <p class="table__text table__text_theme_dark">Удиляйте вниманте количеству и скорости.</p>
           </li>
         </ul>
-        <div class="triangle"></div>
+        <div class="kaufman__triangle"></div>
       </section>
 
   </main>
@@ -139,23 +139,23 @@
     <footer class="footer">
       <div class="footer__columns">
         <div class="footer__column footer__column_content_copyright">
-          <img class="logo logo__place_footer" src="./images/logo_place_footer.svg" alt="Логотип Яндекс Практикум">
+          <img class="logo logo_place_footer" src="./images/logo_place_footer.svg" alt="Логотип Яндекс Практикум">
           <p class="footer__author">&copy; Виктор Абанькин</p>
         </div>
         <div class="footer__column footer__column_content_info">
           <h5 class="footer__column-heading">О Практикуме</h5>
           <nav class="footer__column-links">
-            <a href="#">Главна</a>
-            <a href="#">Концепция</a>
-            <a href="#">Наставники</a>
+            <a class="footer__column-link" href="#">Главна</a>
+            <a class="footer__column-link" href="#">Концепция</a>
+            <a class="footer__column-link" href="#">Наставники</a>
           </nav>
         </div>
         <div class="footer__column footer__column_content_social">
           <h5 class="footer__column footer__column-heading">Соцсети</h5>
           <nav class="footer__column-links">
-            <a href="#"><img src="./images/youtube-icon.svg" alt="логотип youtube">YouTube</a>
-            <a href="#"><img src="./images/vk_color_white.svg" alt="логотип вконтакте">ВКонтакте</a>
-            <a href="#"><img src="./images/tiktok-icon.svg" alt="логотип tiktok">TikTok</a>
+            <a class="footer__column-link" href="#"><img class="footer__social-icon" src="./images/youtube-icon.svg" alt="логотип youtube">YouTube</a>
+            <a class="footer__column-link" href="#"><img class="footer__social-icon" src="./images/vk_color_white.svg" alt="логотип вконтакте">ВКонтакте</a>
+            <a class="footer__column-link" href="#"><img class="footer__social-icon" src="./images/tiktok-icon.svg" alt="логотип tiktok">TikTok</a>
           </nav>
         </div>
       </div>
