--- a/index.html
+++ b/index.html
@@ -73,10 +73,10 @@
         <p class="section-subtitle">Для тех, кто любит прокрастинировать</p>
         <div class="video__iframes">
           <div class="video__iframe">
-            <iframe id="ytplayer" type="text/html" width="515" height="289.6875" src="https://www.youtube.com/embed/arj7oStGLkU" frameborder="0" allowfullscreen></iframe>
+            <iframe id="ytplayer1" width="515" height="289" src="https://www.youtube.com/embed/arj7oStGLkU" style="border: none;" allowfullscreen></iframe>
           </div>
           <div class="video__iframe">
-            <iframe id="ytplayer" type="text/html" width="515" height="289.6875" src="https://www.youtube.com/embed/5MgBikgcWnY" frameborder="0" allowfullscreen></iframe>
+            <iframe id="ytplayer2" width="515" height="289" src="https://www.youtube.com/embed/5MgBikgcWnY" style="border: none;" allowfullscreen></iframe>
           </div>
         </div>
       </section>
