--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Научиться учиться</title>
-  <link rel="stylesheet" href="./vendor/normalize.css">
   <link rel="stylesheet" href="./pages/index.css">
 </head>
 <body>
@@ -21,7 +20,7 @@
 
     <main class="content">
       <section class="description">
-        <div class="two-columns">
+        <article class="two-columns">
           <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
           <div class="two-columns__main-text">
             <p class="two-columns__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы
@@ -33,7 +32,7 @@
             <p class="two-columns__paragraph">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его
               эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
           </div>
-        </div>
+        </article>
       </section>
 
       <section class="techniques">
@@ -42,27 +41,27 @@
         <ul class="cards">
           <li class="cards__item">
             <img class="cards__image" src="./images/cards-attention.png" alt="Книга Брианны Вист об изменении мышления">
-            <h4 class="cards__title">Два вида внимания</h4>
+            <h3 class="cards__title">Два вида внимания</h3>
             <p class="cards__description">Глубокие знания возникают, если чередовать сфокусированное и рассеяное внимание.</p>
           </li>
           <li class="cards__item">
             <img class="cards__image" src="./images/cards-recall.png" alt="Картинка скульптура мальчика">
-            <h4 class="cards__title">Recall</h4>
+            <h3 class="cards__title">Recall</h3>
             <p class="cards__description">Вспоминайте изученное - это позволит соединить разрозненные порции памяти.</p>
           </li>
           <li class="cards__item">
             <img class="cards__image" src="./images/cards-interliving.png" alt="Фото вокзала Oculus">
-            <h4 class="cards__title">Интерливинг</h4>
+            <h3 class="cards__title">Интерливинг</h3>
             <p class="cards__description">Изучайте несколько навыков одновременно, они обогащают друг друга.</p>
           </li>
           <li class="cards__item">
             <img class="cards__image" src="./images/cards-question.png" alt="Фото New Stuttgart City Library">
-            <h4 class="cards__title">Интерливинг</h4>
+            <h3 class="cards__title">Интерливинг</h3>
             <p class="cards__description">Изучайте несколько навыков одновременно, они обогащают друг друга.</p>
           </li>
           <li class="cards__item">
             <img class="cards__image" src="./images/cards-competence.png" alt="Картинка стопка книг на руке">
-            <h4 class="cards__title">Илюзия компитентности</h4>
+            <h3 class="cards__title">Илюзия компитентности</h3>
             <p class="cards__description">Повторите про себя, запишите, раскажите другу: вам только кажется, что вы владеете новой темой.</p>
           </li>
         </ul>
@@ -72,17 +71,13 @@
         <h2 class="section-title">Видео на TED</h2>
         <p class="section-subtitle">Для тех, кто любит прокрастинировать</p>
         <div class="video__iframes">
-          <div class="video__iframe">
-            <iframe id="ytplayer1" width="515" height="289" src="https://www.youtube.com/embed/arj7oStGLkU" style="border: none;" allowfullscreen></iframe>
-          </div>
-          <div class="video__iframe">
-            <iframe id="ytplayer2" width="515" height="289" src="https://www.youtube.com/embed/5MgBikgcWnY" style="border: none;" allowfullscreen></iframe>
-          </div>
+          <iframe class="video__iframe" src="https://www.youtube.com/embed/arj7oStGLkU" allowfullscreen></iframe>
+          <iframe class="video__iframe" src="https://www.youtube.com/embed/5MgBikgcWnY" allowfullscreen></iframe>
         </div>
       </section>
 
       <section class="oakley">
-        <div class="two-columns">
+        <article class="two-columns">
           <h2 class="two-columns__brief">История борьбы Оакли</h2>
           <div class="two-columns__main-text">
             <p class="two-columns__paragraph">С детства Барбаре не давалась математика. Она стчитала себя законченным гуманитарием,
@@ -92,7 +87,7 @@
               ясно с первого взгляда.
             </p>
           </div>
-        </div>
+        </article>
       </section>
 
       <section class="feynman">
@@ -107,37 +102,37 @@
         <p class="section-subtitle">Про учебу и мозг</p>
         <ul class="table">
           <li class="table__cell">
-            <h4 class="table__heading">86 миллиардов</h4>
+            <h3 class="table__heading">86 миллиардов</h3>
             <p class="table__text">Число нейронов в мозге человека</p>
           </li>
           <li class="table__cell">
-            <h4 class="table__heading">2,1 миллиарда</h4>
+            <h3 class="table__heading">2,1 миллиарда</h3>
             <p class="table__text">Число нуждающихся в повышении квалификации</p>
             <p class="table__text">Всемирный банк, 2017</p>
           </li>
           <li class="table__cell">
-            <h4 class="table__heading">1000 терабайт</h4>
+            <h3 class="table__heading">1000 терабайт</h3>
             <p class="table__text">Объем памяти человека</p>
           </li>
           <li class="table__cell">
-            <h4 class="table__heading">500 триллионов</h4>
+            <h3 class="table__heading">500 триллионов</h3>
             <p class="table__text">Число ответственных за обучение нервных синапсов у взрослого человека</p>
           </li>
           <li class="table__cell">
-            <h4 class="table__heading">420 миллионов</h4>
+            <h3 class="table__heading">420 миллионов</h3>
             <p class="table__text">Число взрослых людей моложе 25 лет, не имеющих образование для трудоустройства</p>
             <p class="table__text">Всемирный банк, 2017</p>
           </li>
           <li class="table__cell">
-            <h4 class="table__heading">17-20</h4>
+            <h3 class="table__heading">17-20</h3>
             <p class="table__text">Пик обучаемости</p>
           </li>
           <li class="table__cell">
-            <h4 class="table__heading">1885</h4>
+            <h3 class="table__heading">1885</h3>
             <p class="table__text">Открытие кривой забывания</p>
           </li>
           <li class="table__cell">
-            <h4 class="table__heading">1889</h4>
+            <h3 class="table__heading">1889</h3>
             <p class="table__text">Открытие условного рефлекса</p>
           </li>
         </ul>
@@ -147,9 +142,9 @@
         <div class="khan__container">
           <p class="khan__author">Салман Хан</p>
           <h2 class="khan__title">Весь мир - школа</h2>
-          <p class="khan__quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему миру.
+          <blockquote class="khan__quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему миру.
          Книгу «Весь мир - школа» нужно прочитать всем, кто занимается образованием так - учащиеся повсюду смогут
-         получить навыки и знания, которые приносят успех в школе, карьере и жизни.</p>
+         получить навыки и знания, которые приносят успех в школе, карьере и жизни.</blockquote>
            <p class="khan__quote-author">Джордж Лукас</p>
            <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
           <div class="khan__book-container">
@@ -165,43 +160,43 @@
         <p class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</p>
         <ul class="table table_theme_dark">
           <li class="table__cell table__cell_theme_dark">
-            <h4 class="table__heading table__heading_theme_dark">1</h4>
+            <h3 class="table__heading table__heading_theme_dark">1</h3>
             <p class="table__text table__text_theme_dark">Выберите привлекательный проект.</p>
           </li>
           <li class="table__cell table__cell_theme_dark">
-            <h4 class="table__heading table__heading_theme_dark">2</h4>
+            <h3 class="table__heading table__heading_theme_dark">2</h3>
             <p class="table__text table__text_theme_dark">Сосредоточьтесь на каком-то одном навыке.</p>
           </li>
           <li class="table__cell table__cell_theme_dark">
-            <h4 class="table__heading table__heading_theme_dark">3</h4>
+            <h3 class="table__heading table__heading_theme_dark">3</h3>
             <p class="table__text table__text_theme_dark">Определите целевой уровень мастерства.</p>
           </li>
           <li class="table__cell table__cell_theme_dark">
-            <h4 class="table__heading table__heading_theme_dark">4</h4>
+            <h3 class="table__heading table__heading_theme_dark">4</h3>
             <p class="table__text table__text_theme_dark">Разбейте навык на элементы.</p>
           </li>
           <li class="table__cell table__cell_theme_dark">
-            <h4 class="table__heading table__heading_theme_dark">5</h4>
+            <h3 class="table__heading table__heading_theme_dark">5</h3>
             <p class="table__text table__text_theme_dark">Приготовьте все необходимое для загятий.</p>
           </li>
           <li class="table__cell table__cell_theme_dark">
-            <h4 class="table__heading table__heading_theme_dark">6</h4>
+            <h3 class="table__heading table__heading_theme_dark">6</h3>
             <p class="table__text table__text_theme_dark">Устраните препятствие для занятий.</p>
           </li>
           <li class="table__cell table__cell_theme_dark">
-            <h4 class="table__heading table__heading_theme_dark">7</h4>
+            <h3 class="table__heading table__heading_theme_dark">7</h3>
             <p class="table__text table__text_theme_dark">Выберите специальное время для занятий.</p>
           </li>
           <li class="table__cell table__cell_theme_dark">
-            <h4 class="table__heading table__heading_theme_dark">8</h4>
+            <h3 class="table__heading table__heading_theme_dark">8</h3>
             <p class="table__text table__text_theme_dark">Создайте быстрые петли для обратной связи.</p>
           </li>
           <li class="table__cell table__cell_theme_dark">
-            <h4 class="table__heading table__heading_theme_dark">9</h4>
+            <h3 class="table__heading table__heading_theme_dark">9</h3>
             <p class="table__text table__text_theme_dark">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
           </li>
           <li class="table__cell table__cell_theme_dark">
-            <h4 class="table__heading table__heading_theme_dark">10</h4>
+            <h3 class="table__heading table__heading_theme_dark">10</h3>
             <p class="table__text table__text_theme_dark">Удиляйте вниманте количеству и скорости.</p>
           </li>
         </ul>
@@ -212,10 +207,10 @@
         <h2 class="section-title">Полезные ресурсы</h2>
         <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
         <div class="resources__logo-zone">
-            <a href="#" class="resources__link"><img src="./images/logo/resources-arzamas.svg" alt="Логотип Arzamas"></a>
-            <a href="#" class="resources__link"><img src="./images/logo/resources-n1.svg" alt="Логотип N+1"></a>
-            <a href="#" class="resources__link"><img src="./images/logo/resources-strelka.svg" alt="Логотип STRELKA"></a>
-            <a href="#" class="resources__link"><img src="./images/logo/resources-polka.svg" alt="Логотип ПОЛКА"></a>
+            <a href="#" class="resources__link"><img class="resources__logo" src="./images/logo/resources-arzamas.svg" alt="Логотип Arzamas"></a>
+            <a href="#" class="resources__link"><img class="resources__logo" src="./images/logo/resources-n1.svg" alt="Логотип N+1"></a>
+            <a href="#" class="resources__link"><img class="resources__logo" src="./images/logo/resources-strelka.svg" alt="Логотип STRELKA"></a>
+            <a href="#" class="resources__link"><img class="resources__logo" src="./images/logo/resources-polka.svg" alt="Логотип ПОЛКА"></a>
         </div>
       </section>
 
